--- a/phc/templates/phc/index.html
+++ b/phc/templates/phc/index.html
@@ -39,7 +39,7 @@
              <section class="card">
                  <img src="{% static 'main/images/users/users.png' %}" class="card-img" alt="...">
                  <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                   <h2 class="card-title text-white">Patners</h2>
+                   <h2 class="card-title text-white">Partners</h2>
                  </div>
                </section>  
             </a>            
@@ -50,7 +50,7 @@
              <section class="card">
                  <img src="{% static 'main/images/users/users.png' %}" class="card-img" alt="...">
                  <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                   <h2 class="card-title text-white">Events</h2>
+                   <h2 class="card-title text-white">Indicators</h2>
                  </div>
                </section>  
             </a>            
