--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -10,7 +10,7 @@
            
             <h2 class="font-weight-bold mt-4 text-white">Primary Care Networks (PCNs)</h2>
             
-            <a href="{% url 'phc:index' %}" class="btn btn-lg btn-primary mt-4">Customized Reports</a>
+            <a href="{% url 'main:dashboard' %}" class="btn btn-lg btn-primary mt-4">Customized Reports</a>
             <a href="" class="btn btn-lg btn-primary mt-4">Data Managers Account</a>
         </div>
     </div>
