--- a/phc/templates/phc/county.html
+++ b/phc/templates/phc/county.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h3 class="mb-0 font-size-18">{{county.name}} County</h3>
+                    <h3 class="mb-0 font-size-18">{{county.name}}</h3>
                 </div>
                 {% if subcounties %}
                     <table class="table table-bordered">
