--- a/phc/templates/phc/create_indicator.html
+++ b/phc/templates/phc/create_indicator.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base1.html' %}
 {% load static %}
 
 {% block content %}
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h3 class="mb-0 font-size-18">Dashboard >> Create Company Profile</h3>
+                    <h3 class="mb-0 font-size-18">Dashboard >> Add Indicator</h3>
                 </div>
             </div>
         </div> 
