--- a/phc/templates/phc/response.html
+++ b/phc/templates/phc/response.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base1.html' %}
 {% load static %}
 
 {% block content %}
@@ -7,14 +7,20 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h3 class="mb-0 font-size-18">Dashboard >> Update Hero Section</h3>
+                    <h3 class="mb-0 font-size-18">Dashboard >> Update Response</h3>
                 </div>
             </div>
         </div> 
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
-
+            
+            {% for question in questions_and_responses %}
+            <div class="mb-3">
+                <label>{{ question.text }}</label>
+               
+            </div>
+            {% endfor %}
+            
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-primary">Save</button>
             </div>
