--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -152,7 +152,24 @@
       </div> <!-- end col-->
       </div>
       <div class="row">
-        <div class="col-8">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                    <canvas id="stageChart" width="400" height="300"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                   <canvas id="stagePieChart" width="400" height="400"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end row-->
+      <div class="row">
+        <div class="col-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">PCNs ACTION</h4>
@@ -204,13 +221,7 @@
                 </div> <!-- end card body-->
             </div> <!-- end card -->
         </div><!-- end col-->
-        <div class="col-4">
-            <div class="card">
-                <div class="card-body">
-                    <canvas id="stageChart" width="400" height="650"></canvas>
-                </div>
-            </div>
-        </div>
+       
     </div>
     <!-- end row-->
 
