--- a/main/templates/main/includes/dashboard.html
+++ b/main/templates/main/includes/dashboard.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="topnav-menu-content">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">
+                        <a class="nav-link" href="{% url 'main:dashboard' %}">
                             <i class="mdi mdi-view-dashboard mr-2"></i>Dashboard
                         </a>
                     </li>
